commit with mistake. Need to work on the code more